--- a/views/Say.html
+++ b/views/Say.html
@@ -10,7 +10,7 @@
   <script src="../static/js/jquery.fullPage.js"></script>
   <script src="../static/js/anime_v3.2.2.js"></script>
   <script src="../static/js/typed.umd.js"></script>
-  <script src="../static/js/typed.umd.js.map"></script>
+  <!-- <script src="../static/js/typed.umd.js.map"></script> -->
 
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.2/anime.min.js" integrity="sha512-aNMyYYxdIxIaot0Y1/PLuEu3eipGCmsEUBrUq+7aVyPGMFH8z0eTP0tkqAvv34fzN6z+201d3T8HPb1svWSKHQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/fullPage.js/4.0.20/fullpage.min.js" integrity="sha512-LGiXf+jHGTHcIybSsOWO3I/in+OObCkcEsWIZ7IyhzfD6RzD5qDUw2CK+JveuI7zTSEcDG//bIOvOpAJW2BWsg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> -->
@@ -21,6 +21,7 @@
 
 <body>
   <div style="z-index:100;" id="dowebok">
+    <!-- 第一页 -->
     <div class="section">
       <div class="box-cont">
         <!-- 白色点过度到圆角矩形 -->
@@ -39,51 +40,109 @@
         </div>
       </div>
     </div>
-
+    <!-- 第二页 -->
     <div class="section">
-      <div class="box-cont">
+      <div class="box-cont"
+        style="background-image: url('../static/images/background/image-b128294c-133c-4646-a018-e30825430991-1046-1743.jpg');">
         <div class="cont">
-          <div class="p-font">
-            <p class="p-class">见字如晤，展信舒颜，意在君安！</p>
-            <p class="p-class" style="font-style: italic;">见字如晤，展信舒颜，意在君安！</p>
-            <p class="p-class">见字如晤，展信舒颜，意在君安！</p>
-            <p class="fade-out-text">见字如晤，展信舒颜，意在君安！</p>
-          </div>
-        </div>
-        <div class="cont">
-          <div class="p-font" style="font-size: 20px;">
-            <p class="p-class">见字如晤，展信舒颜，意在君安！</p>
-            <p class="p-class">见字如晤，展信舒颜，意在君安！</p>
-            <p class="p-class">见字如晤，展信舒颜，意在君安！</p>
-            <p class="fade-out-text">见字如晤，展信舒颜，意在君安！</p>
-          </div>
-        </div>
-        <div class="cont">
-          <div id="c202" class="p-font">
-            <div id="c202c">
+          <div id="c201">
+            <div id="c201c">
               <div class="p-font">
-                <p class="p-class"> Best Wishes:</p>
-                <p class="p-class"> Each birthday is a milestone we touch along life\'s way May your birthday be happy
-                  in
-                  more ways than one.</p>
-                <p class="p-class"> I hasten to congratulate you on the coming of your birthday. </p>
-                <p class="p-class"> May gladness fill your every hour with joy to light your way. </p>
-                <p class="p-class"> Wishing you a wonderful birthday. </p>
-                <p class="p-class"> You make this world a nicer place just by being so kindhearted. </p>
-                <p class="p-class"> May this day that is all your own hold happiness for you and the years to come be
-                  filled
-                  with all best things, too</p>
+                <p class="p-class">祝</p>
+                <p class="p-class">你</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="cont">
+          <div id="c202">
+            <div id="c202c">
+              <div class="p-font" style="font-size: 20px;">
+                <p class="p-class">百事可乐 </p>
+                <p class="p-class">万事芬达</p>
+                <p class="p-class">天天娃哈哈</p>
+                <p class="p-class">月月乐百事</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="cont">
+          <div id="c203" class="p-font">
+            <div id="c203c">
+              <div class="p-font">
+                <p class="p-class">年年高乐高 </p>
+                <p class="p-class">心情似雪碧</p>
+                <p class="p-class">永远心飞扬</p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+    <!-- 第三页 -->
     <div class="section">
-
+      <div class="box-cont"
+        style="background-image: url('../static/images/background/image-b128294c-133c-4646-a018-e30825430991-1046-1743.jpg');">
+        <div class="cont">
+          <div id="c301">
+            <div id="c301c">
+              <div class="p-font">
+                <p class="p-class">太阳是金色的</p>
+                <p class="p-class">月亮是银色的</p>
+                <p class="p-class">而你是彩色的</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="cont">
+          <div id="c302">
+            <div id="c302c">
+              <div class="p-font" style="font-size: 20px;">
+                <p class="p-class">愿你被幸福环绕 </p>
+                <p class="p-class">被好运追逐</p>
+                <p class="p-class">被快乐降伏</p>
+                <p class="p-class">被笑容粘住</p>
+                <p class="p-class">那时别忘了，有人在远方为你祝福，生日快乐</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="cont">
+          <div id="c303">
+            <div id="c303c">
+              <div class="p-font">
+                <p class="p-class">希望你像满天星一样璀璨</p>
+                <p class="p-class">祝你眼里有星河，心中藏月光</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="section">e</div>
-    <div class="section">e</div>
+    <!-- 第四页 -->
+    <div class="section">
+      <div class="box-cont"
+        style="background-image: url('../static/images/background/image-b128294c-133c-4646-a018-e30825430991-1046-1743.jpg');">
+        <div class="cont" style="width: 80%;">
+          <div id="c401">
+            <div id="c401c">
+              <div class="p-font">
+                <p class="p-class">恭喜你，已长成亭亭玉立的大姑娘啦!</p>
+                <p class="p-class">不管多大，都要热爱生活，相信童话故事里的英雄和魔法。</p>
+                <p class="p-class">我有很长的故事要讲，你愿意听吗？</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- 第五页 -->
+    <div class="section">
+      <div
+        style="display: flex;flex-direction: row;flex-wrap: nowrap;align-content: center;justify-content: center;align-items: center;">
+        <h2>让我们继续</h2>
+      </div>
+    </div>
   </div>
 </body>
 <script src="../static/js/users/say.js"></script>
