--- a/views/first.html
+++ b/views/first.html
@@ -133,7 +133,8 @@
     </script>
     <script>
         let sayYou = "❤|Hi 龚静|今天可是一个|重要的日子|祝你快乐|不止生日|生日快乐哟|#countdown 3|#rectangle 50x50|#circle 20 |#break|";
-        let hrefNextPage = "./fireworks/index.html"
+        sayYou = "❤|Hi 龚静|今天可是一个|重要的日子|祝你快乐|不止生日|生日快乐哟|#countdown 3|#rectangle 50x50|#break|";
+        let hrefNextPage = "./BirthdayCake.html"
         var S = {
             init: function () {
                 S.Drawing.init('.canvas');
