--- a/views/BigBirthdayCake.html
+++ b/views/BigBirthdayCake.html
@@ -3,56 +3,31 @@
 
 <head>
     <meta charset="UTF-8">
-  <meta name="description" content="利用 svg制作的一个蛋糕界面">
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="description" content="利用 svg制作的一个蛋糕界面">
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <title>Happy Birthday to 龚静</title>
     <style>
-        body {
-            margin: 0;
-            padding: 0;
-            overflow: hidden;
-            font-family: '楷体';
-        }
-
-        html,
-        body {
-            height: 100%;
-        }
-
+        /* ============================================== Candle*/
         #cake {
-            display: block;
-            position: relative;
-            left: 50%;
-            margin-top: -10em;
-            margin-bottom: 0;
-            margin-left: -100px;
-
+            margin-top: -51em
         }
 
         .bg {
-            width: 100%;
-            height: 100%;
-            background: #ee9ca7;
-            background: -webkit-linear-gradient(top left, #ee9ca7 0%, #ee9ca7 100%);
-            background: linear-gradient(to bottom right, #ee9ca7 0%, #ee9ca7 100%);
+            margin-top: 11%;
+            overflow: hidden;
         }
 
         .velas {
             background: #ffffff;
             border-radius: 10px;
-            position: relative;
-            top: 247px;
             margin-left: 49.5%;
+            margin-top: 53px;
             width: 5px;
             height: 35px;
-            -webkit-transform: translateY(-300px);
             -ms-transform: translateY(-300px);
-            transform: translateY(-300px);
-            -webkit-backface-visibility: hidden;
             -ms-backface-visibility: hidden;
-            backface-visibility: hidden;
-            -webkit-animation: in 500ms 6s ease-out forwards;
             animation: in 500ms 6s ease-out forwards;
+            animation-delay: 1s;
         }
 
         .velas:after,
@@ -191,352 +166,7 @@
             to {
                 opacity: 1;
             }
-        }
-
-        .bg-bubbles {
-            position: absolute;
-            margin: 0;
-            padding: 0;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            z-index: 1;
-        }
-
-        .bg-bubbles li {
-            position: absolute;
-            list-style: none;
-            display: block;
-            width: 40px;
-            height: 40px;
-            background-color: rgba(255, 255, 255, 0.15);
-            bottom: -160px;
-            -webkit-animation: square 30s infinite;
-            animation: square 30s infinite;
-            -webkit-transition-timing-function: linear;
-            transition-timing-function: linear;
-        }
-
-        .bg-bubbles li:nth-child(1) {
-            left: 10%;
-        }
-
-        .bg-bubbles li:nth-child(2) {
-            left: 20%;
-            width: 80px;
-            height: 80px;
-            -webkit-animation-delay: 2s;
-            animation-delay: 2s;
-            -webkit-animation-duration: 17s;
-            animation-duration: 17s;
-        }
-
-        .bg-bubbles li:nth-child(3) {
-            left: 25%;
-            -webkit-animation-delay: 4s;
-            animation-delay: 4s;
-        }
-
-        .bg-bubbles li:nth-child(4) {
-            left: 40%;
-            width: 60px;
-            height: 60px;
-            -webkit-animation-duration: 22s;
-            animation-duration: 22s;
-            background-color: rgba(255, 255, 255, 0.25);
-        }
-
-        .bg-bubbles li:nth-child(5) {
-            left: 70%;
-        }
-
-        .bg-bubbles li:nth-child(6) {
-            left: 80%;
-            width: 120px;
-            height: 120px;
-            -webkit-animation-delay: 3s;
-            animation-delay: 3s;
-            background-color: rgba(255, 255, 255, 0.2);
-        }
-
-        .bg-bubbles li:nth-child(7) {
-            left: 32%;
-            width: 160px;
-            height: 160px;
-            -webkit-animation-delay: 7s;
-            animation-delay: 7s;
-        }
-
-        .bg-bubbles li:nth-child(8) {
-            left: 55%;
-            width: 20px;
-            height: 20px;
-            -webkit-animation-delay: 15s;
-            animation-delay: 15s;
-            -webkit-animation-duration: 40s;
-            animation-duration: 40s;
-        }
-
-        .bg-bubbles li:nth-child(9) {
-            left: 25%;
-            width: 10px;
-            height: 10px;
-            -webkit-animation-delay: 2s;
-            animation-delay: 2s;
-            -webkit-animation-duration: 40s;
-            animation-duration: 40s;
-            background-color: rgba(255, 255, 255, 0.3);
-        }
-
-        .bg-bubbles li:nth-child(10) {
-            left: 90%;
-            width: 160px;
-            height: 160px;
-            -webkit-animation-delay: 11s;
-            animation-delay: 11s;
-        }
-
-        @-webkit-keyframes square {
-            0% {
-                -webkit-transform: translateY(0);
-                transform: translateY(0);
-            }
-
-            100% {
-                -webkit-transform: translateY(-900px) rotate(600deg);
-                transform: translateY(-900px) rotate(600deg);
-            }
-        }
-
-        @keyframes square {
-            0% {
-                -webkit-transform: translateY(0);
-                transform: translateY(0);
-            }
-
-            100% {
-                -webkit-transform: translateY(-900px) rotate(600deg);
-                transform: translateY(-900px) rotate(600deg);
-            }
-        }
-
-        .happy {
-            position: absolute;
-            opacity: 0;
-            width: 230px;
-            height: 137px;
-            overflow: hidden;
-            left: 50%;
-            margin-left: -115px;
-            top: 30%;
-
-
-            animation-delay: 0s;
-        }
-
-        @keyframes happybirthdays {
-            0% {
-                position: absolute;
-                top: 45%;
-                opacity: 0;
-            }
-
-            70% {
-                position: absolute;
-                top: 45%;
-                opacity: 0;
-            }
-
-            100% {
-                position: absolute;
-                top: 49%;
-                opacity: 1;
-            }
-        }
-
-        @-webkit-keyframes happybirthdays {
-            0% {
-                position: absolute;
-                top: 45%;
-                opacity: 0;
-            }
-
-            70% {
-                position: absolute;
-                top: 45%;
-                opacity: 0;
-            }
-
-            100% {
-                position: absolute;
-                top: 49%;
-                opacity: 1;
-            }
-        }
-
-        .button-style1,
-        .button-style2 {
-            position: absolute;
-            top: 40%;
-            opacity: 1;
-            z-index: 100;
-        }
-
-        .button-style1 {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            margin-left: -87px;
-            opacity: 0;
-        }
-
-        .button-style2 {
-            position: absolute;
-            top: 60%;
-            margin-left: -87px;
-            left: 50%;
-            opacity: 0;
-
-        }
-
-        .name {
-            font-weight: bold;
-            position: absolute;
-            text-align: center;
-            overflow: hidden;
-            width: 100%;
-            top: -100px;
-            opacity: 0;
-            font-size: 32px;
-            color: #fff;
-        }
-
-        @keyframes btn1 {
-            0% {
-                opacity: 0;
-                top: 60%;
-            }
-
-            70% {
-                opacity: 0;
-                top: 60%;
-            }
-
-            100% {
-                opacity: 1;
-                top: 70%;
-            }
-        }
-
-        @-webkit-keyframes btn1 {
-            0% {
-                opacity: 0;
-                top: 60%;
-            }
-
-            70% {
-                opacity: 0;
-                top: 60%;
-            }
-
-            100% {
-                opacity: 1;
-                top: 70%;
-            }
-        }
-
-        @keyframes btn2 {
-            0% {
-                opacity: 0;
-                top: 60%;
-            }
-
-            70% {
-                opacity: 0;
-                top: 70%;
-            }
-
-            100% {
-                opacity: 1;
-                top: 85%;
-            }
-        }
-
-        @-webkit-keyframes btn2 {
-            0% {
-                opacity: 0;
-                top: 60%;
-            }
-
-            70% {
-                opacity: 0;
-                top: 70%;
-            }
-
-            100% {
-                opacity: 1;
-                top: 85%;
-            }
-        }
-
-        .lk1,
-        .lk2 {
-            text-decoration: none;
-            font-family: Microsoft YaHei;
-            color: #fff;
-            transition: all 0.5s;
-        }
-
-        .link1,
-        .link2 {
-            width: 170px;
-            height: 60px;
-            border: 2px solid #fff;
-            -webkit-border: 1px solid #fff;
-            border-radius: 30px;
-            font-size: 23px;
-            text-align: center;
-            background: #ee9ca7;
-            transition: all 0.8s;
-        }
-
-        .link2 {
-            cursor: not-allowed;
-        }
-
-        .bt1,
-        .bt2 {
-            position: relative;
-            top: 22%;
-            vertical-align: middle;
-        }
-
-        a.lk1:hover {
-            color: #ee9ca7;
-            transition: all 0.5s;
-        }
-
-        .link1:hover {
-            background-color: #fff;
-            background-color: rgba(255, 255, 255, 0, 2);
-            border: 2px solid #BBB;
-            transition: all 0.8s;
-        }
-
-        a.lk2:hover {
-            color: #ee9ca7;
-            transition: all 0.5s;
-        }
-
-        .link2:hover {
-            background-color: #fff;
-            background-color: rgba(255, 255, 255, 0, 2);
-            border: 2px solid #BBB;
-            transition: all 0.8s;
-        }
-
-        @keyframes btndh {
+        }@keyframes btndh {
             from {
                 opacity: 0;
             }
@@ -548,14 +178,33 @@
         .button-style1{
             animation: btndh 0.5s ease-in-out 5s 1 normal both;
         }
-        .button-style2{
-            animation: btndh 0.5s ease-in-out 5s 1 normal both;
+        .link1 {
+            width: 170px;
+            height: 60px;
+            display: flex;
+            border: 2px solid #fff;
+            -webkit-border: 1px solid #fff;
+            border-radius: 30px;
+            font-size: 23px;
+            text-align: center;
+            background: pink;
+            transition: all 0.8s;
+            align-content: center;
+            justify-content: center;
+            align-items: center;
+        }
+
+        .lk1 {
+            text-decoration: none;
+            font-family: Microsoft YaHei;
+            color: #fff;
+            transition: all 0.5s;
         }
     </style>
 </head>
 
-<body>
-
+<body
+    style="display: flex;background-color: pink;flex-direction: column;flex-wrap: nowrap;align-content: center;justify-content: center;align-items: center;">
     <div class="bg">
         <div class="velas">
             <div class="fuego"></div>
@@ -564,7 +213,7 @@
             <div class="fuego"></div>
             <div class="fuego"></div>
         </div>
-        <svg id="cake" version="1.1" x="0px" y="0px" width="200px" height="500px" viewBox="0 0 200 500"
+        <svg id="cake" version="1.1" x="0px" y="0px" width="500px" height="1000px" viewBox="0 0 200 500"
             enable-background="new 0 0 200 500" xml:space="preserve">
             <path fill="#a88679" d="M173.667-13.94c-49.298,0-102.782,0-147.334,0c-3.999,0-4-16.002,0-16.002
     		c44.697,0,96.586,0,147.334,0C177.667-29.942,177.668-13.94,173.667-13.94z">
@@ -722,74 +371,15 @@
             <rect class="come" x="10" y="475.571" fill="#fefae9" width="180" height="4" />
         </svg>
     </div>
-    <div class="name">生日快乐</div>
-    <div class="happy">
-        <img src="../static/images/birthday_art.png">
-    </div>
     <div class="button-style1">
         <a href="Say.html" class="lk1">
             <div class="link1">
                 <div class="bt1">
-                    下一步
+                    公主满意了
                 </div>
             </div>
         </a>
     </div>
-    <div class="button-style2">
-        <a href="BigBirthdayCake.html" class="lk2">
-            <div class="link2">
-                <div class="bt1">
-                    蛋糕不够大
-                </div>
-            </div>
-        </a>
-    </div>
-    <ul class="bg-bubbles">
-        <li><img src="../static/images/birthday.gif" style="width:100%;height:100%"></li>
-        <li><img src="../static/images/birthday.gif" style="width:100%;height:100%"></li>
-        <li><img src="../static/images/birthday.gif" style="width:100%;height:100%"></li>
-        <li><img src="../static/images/birthday.gif" style="width:100%;height:100%"></li>
-        <li><img src="../static/images/birthday.gif" style="width:100%;height:100%"></li>
-        <li><img src="../static/images/birthday.gif" style="width:100%;height:100%"></li>
-        <li><img src="../static/images/birthday.gif" style="width:100%;height:100%"></li>
-        <li><img src="../static/images/birthday.gif" style="width:100%;height:100%"></li>
-        <li><img src="../static/images/birthday.gif" style="width:100%;height:100%"></li>
-        <li><img src="../static/images/birthday.gif" style="width:100%;height:100%"></li>
-    </ul>
-    <script src='../static/js/jquery-3.7.1.js'></script>
-    <script>
-        $(function () {
-            // setTimeout(function () {
-            //     $('.name').animate({
-            //         opacity: "1",
-            //         top: "15%"
-            //     }, 2000);
-
-            // }, 6000);
-            // setTimeout(function () {
-            //     $('.happy').animate({
-            //         opacity: "1",
-            //         top: "15%"
-            //     }, 2000);
-
-            // }, 6000);
-            // setTimeout(function () {
-            //     $('.button-style1').animate({
-            //         opacity: "1",
-            //         top: "70%"
-            //     }, 1500);
-            //     $('.button-style2').animate({
-            //         opacity: "1",
-            //         top: "85%"
-            //     }, 2000);
-            // }, 9000);
-            $(window).click(function () {
-                $('audio')[0].play();
-            });
-            window.audio = $('audio')[0].play();
-        })
-    </script>
-    <audio src="../static/musics/1.mp3" autoplay="autoplay" loop="loop"></audio>
 </body>
 
 </html>
