--- a/views/Say.html
+++ b/views/Say.html
@@ -146,5 +146,14 @@
   </div>
 </body>
 <script src="../static/js/users/say.js"></script>
+<script>
+  $(function () {
+    $(window).click(function () {
+      $('audio')[0].play();
+    });
+    window.audio = $('audio')[0].play();
+  })
+</script>
+<audio src="../static/musics/o8KyhIHUzHlIHA5qQhtBBEGdxfsdAxgW9JMs3Q.m4a" autoplay="autoplay" loop="loop"></audio>
 
 </html>
