--- a/views/impress_index.html
+++ b/views/impress_index.html
@@ -58,8 +58,8 @@
       width: max-content;
     }
 
-    .active .step-content>:nth-child(2) {
-      background-image: url('../static/images/background/image-3ec3fa57-9d87-499c-b5cb-87199278f7da-2880-5120.jpeg');
+    .active .step-content>:nth-child(3) {
+      background-image: url('../static/images/shan-shan/IMG_3609.JPG');
       background-repeat: round;
       width: 100%;
       height: 100%;
@@ -69,6 +69,7 @@
 </head>
 
 <body class="impress-not-supported">
+  <!-- data-perspective 3D 渲染的透视图 -->
   <div id="impress" data-width="1920" data-height="1080" data-perspective="500">
     <div class="step slide" data-x="0" data-y="0" data-z="0">
       <div class="step-content">
@@ -89,8 +90,7 @@
         <div></div>
       </div>
     </div>
-    <div class="step" data-x="5760" data-rel-rotate-y="45" data-scale="1" data-y="-500" data-rotate-y="45"
-      data-z="-500">
+    <div class="step" data-rel-reset="all"  data-x="1920" data-y="1080" data-z="-500"  data-scale="1" data-rotate="90"  data-rel-rotate-y="45">
       <div class="step-content-font">
         <p>
           <span class="footnote">
@@ -100,35 +100,35 @@
         </p>
       </div>
     </div>
-    <div class="step" data-rel-rotate-y="-45" data-scale="1">
+    <div class="step" data-rel-rotate-y="-90" data-scale="1">
       <div class="step-content-font">
         <p>绣面芙蓉一笑开。斜偎宝鸭衬香腮。眼波才动被人猜。</p>
         <p>一面风情深有韵，半笺娇恨寄幽怀。月移花影约重来。</p>
       </div>
     </div>
-    <div class="step" data-x="-6000" data-y="-4000" data-scale="2">
+    <div class="step" data-x="3840" data-y="1080" data-rel-reset="all" data-scale="2">
       <div class="step-content-font">
         <p>孤灯相映，忽而思卿一别三日，已似三秋</p>
       </div>
     </div>
-    <div class="step" data-x="-6000" data-y="-5920" data-scale="2">
+    <div class="step" data-rel-rotate-y="90">
       <div class="step-content-font">
         <p>君亦思卿，良辰美景惜卿不在旁，相思无因见，怅望凉风前</p>
       </div>
     </div>
-    <div class="step" data-x="-2000" data-y="-5920" data-scale="2">
+    <div class="step" data-x="-5760" data-y="3240" data-rel-rotate-y="0" data-scale="2">
       <div class="step-content-font">
-        <p>我希望你能喜欢春天</p>
+        <p>我希望你也能喜欢春天</p>
       </div>
     </div>
-    <div class="step" data-x="-4000" data-y="-5920" data-scale="2">
+    <div class="step" data-rel-rotate-y="90" data-scale="2">
       <div class="step-content-font">
-        <p>我愿你是蓬勃的，希望我们是两朵开在山崖上的明黄色小花</p>
+        <p>希望你生计蓬勃，希望我们是两朵开在山崖上的明黄色小花</p>
       </div>
     </div>
-    <div class="step" data-x="-6000" data-y="-2920" data-scale="2">
+    <div class="step" data-x="-5760" data-y="-3240" data-scale="2">
       <div class="step-content-font">
-        <p>我想你能知道，你是我贫瘠灵魂中微弱的生命力，是我还未到来的春天</p>
+        <p>希望你能知道，你是我贫瘠灵魂中微弱的生命力，是我还未到来的春天</p>
       </div>
     </div>
     <div class="step" data-x="-6000" data-y="-4920" data-scale="2">
@@ -136,22 +136,27 @@
         <p>久经这一程风马云车的赶，才敢与你说一声迟来未晚的慌张</p>
       </div>
     </div>
-    <div class="step" data-x="-6000" data-y="-5920" data-scale="2">
+    <div class="step" data-x="-7680" data-y="-4320" data-scale="2">
       <div class="step-content-font">
         <p>且敬我生命之山 恒古长青</p>
       </div>
     </div>
-    <div class="step" data-x="-6000" data-y="-5920" data-scale="2">
+    <div class="step" data-x="-7680" data-y="-4620" data-scale="2">
       <div class="step-content-font">
         <p>且敬你踏过千山 得悟悲欢</p>
       </div>
     </div>
-    <div class="step" data-x="-6000" data-y="-5920" data-scale="2">
+    <div class="step" data-x="-7680" data-y="-4920" data-scale="2">
+      <div class="step-content-font">
+        <p>万语难尽涩于口，祈尔繁芜胜常春</p>
+      </div>
+    </div>
+    <div class="step" data-rel-reset="all" data-x="-6000" data-y="-5920" data-scale="2">
       <div class="step-content-font">
         <p>未见你时，头脑清晰，可你向我跑来，风瞬间吹乱了思绪</p>
       </div>
     </div>
-    <div class="step" data-x="-6000" data-y="-5920" data-scale="2">
+    <div class="step" data-x="-4760" data-rel-z="-1315" data-rel-rotate-y="45" data-scale="2">
       <div class="step-content-font">
         <p>我会支持你，相信你，保护你！你开心我便开心，你不高兴我也会很难过！</p>
       </div>
@@ -173,7 +178,18 @@
     </div>
     <div class="step" data-x="6400" data-y="4500" data-scale="2">
       <div class="step-content-font">
-        <p>hhh</p>
+        <p>想要路过你生命中所有的四季</p>
+      </div>
+    </div>
+    <div class="step" data-x="6400" data-y="4500" data-z="5000" data-scale="2">
+      <div class="step-content-font" style="width: 1920;height: 1080;">
+        <iframe id="inlineFrameExample" title="Inline Frame Example" width="1920" height="1080" src="./images_show_02.html">
+        </iframe>
+      </div>
+    </div>
+    <div class="step" data-x="6400" data-y="4500" data-z="5000" data-scale="2">
+      <div class="step-content-font" style="width: 1920;height: 1080;">
+       
       </div>
     </div>
   </div>
@@ -195,21 +211,21 @@
   <script type="text/javascript" src="../static/js/impress.js"></script>
   <script>
     impress().init();
-    var audio = document.getElementById("myAudio");
-    audio.play();
-    audio.playbackRate = 1.5;
-
     var rootElement = document.getElementById("impress");
     rootElement.addEventListener("impress:stepleave", function (event) {
       var currentStep = event.target;
       var nextStep = event.detail.next;
       console.log("Left the Step Element '" + currentStep.id + "' and about to enter '" + nextStep.id);
     });
+    var stepsEl = [].slice.call(document.querySelectorAll('.step'));
+    console.log("stepsEl.length", stepsEl.length);
     rootElement.addEventListener("impress:stepenter", function (event) {
       var currentStep = event.target;
       console.log("Entered the Step Element '" + currentStep.id + "'");
-      if (currentStep.id == "ring2-8") {
-        setTimeout(() => { location.href = "./impress_index.html"; }, 2000);
+      if (currentStep.id == `step-${stepsEl.length}`) {
+        setTimeout(() => {
+          location.href = "./fireworks/index.html"
+        }, 2000);
       }
     });
   </script>
@@ -232,6 +248,7 @@
     };
     requestAnimationFrame(update);
   </script>
+  <script src="../static/js/jquery-3.7.1.js"></script>
   <script>
     $(function () {
       $(window).click(function () {
@@ -241,7 +258,7 @@
     })
   </script>
   <audio src="../static/musics/夏日往事.m4a" autoplay="autoplay" loop="loop"></audio>
-  
+
 </body>
 
 </html>
