--- a/views/index.html
+++ b/views/index.html
@@ -72,11 +72,14 @@
 <body class="impress-not-supported">
   <div id="impress">
     <div id="overview" class="step overview" data-rel-position="relative" data-x="-1000" data-y="-1000" data-z="1000"
-      data-rel-rotate-z="45" data-scale="1">
+      data-rel-rotate-z="45" data-scale="4">
       <div>
-        <p style="color: aliceblue;font-size: 7rem;">This demo use <code>data-rel-position="relative"</code><br>
-          and <code>data-rel-rotate-x/y/z</code><br>
-          to easy 3D positioning of slides.</p>
+        <p style="color: aliceblue;font-size: 4rem;">
+          Hello<br>
+        </p>
+        <p style="color: aliceblue;font-size: 2rem;">
+          繁星点点，而你独一无二。
+        </p>
       </div>
     </div>
     <div class="step" data-rel-reset="all" data-x="0" data-y="0" data-z="0">
