--- a/views/first.html
+++ b/views/first.html
@@ -623,6 +623,17 @@
         }());
         S.init();
     </script>
+     <script src="../static/js/jquery-3.7.1.js"></script>
+     <script>
+       $(function () {
+         $(window).click(function () {
+           $('audio')[0].play();
+         });
+         window.audio = $('audio')[0].play();
+       })
+     </script>
+     <audio src="../static/musics/2e00b70945124e46ab26538a8f7cb056.m4a" autoplay="autoplay" loop="loop"></audio>
+   
 </body>
 
 </html>
