--- a/views/Say.html
+++ b/views/Say.html
@@ -31,7 +31,7 @@
               <div class="p-font">
                 <p class="p-class">Hi</p>
                 <p class="p-class">今天是一个特别重要的日子</p>
-                <p class="p-class">那就是我们静静大宝贝的生日</p>
+                <p class="p-class">那就是我大宝贝的生日</p>
                 <p class="p-class">在这个重要的时刻我想说一句</p>
                 <p class="p-class">生日快乐</p>
               </div>
@@ -127,7 +127,7 @@
           <div id="c401">
             <div id="c401c">
               <div class="p-font">
-                <p class="p-class">恭喜你，已长成亭亭玉立的大姑娘啦!</p>
+                <p class="p-class">恭喜你，已长成为亭亭玉立的大姑娘啦!</p>
                 <p class="p-class">不管多大，都要热爱生活，相信童话故事里的英雄和魔法。</p>
                 <p class="p-class">我有很长的故事要讲，你愿意听吗？</p>
               </div>
