--- a/views/jiao-jiao/index.html
+++ b/views/jiao-jiao/index.html
@@ -49,7 +49,7 @@
     }
 
     .step.ring2 {
-      background-color: cyan;
+      background-color: rgb(255, 255, 255);
     }
 
     .step.box {
@@ -76,21 +76,6 @@
       </div>
     </div>
 
-    <!-- <div id="box-front" class="step box" data-x="-3000" data-y="0" data-z="0" data-rotate-x="0" data-rotate-y="0" data-rotate-z="0">
-          <div style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/IMG_0506.JPG');background-repeat: no-repeat;background-size: 100% ;"></div>
-      </div>
-      <div id="box-front1" class="step box1" data-rel-reset data-rel-z="-200" data-scale="0.6">Inside Front</div>
-      <div id="box-right1" class="step box1" data-rel-reset data-rel-x="300" data-rel-z="-300" data-rel-rotate-y="90" data-scale="0.6">Inside Right</div>
-      <div id="box-right" class="step box" data-rel-reset data-rel-z="200">Right</div>
-      <div id="box-back" class="step box" data-rel-reset data-rel-x="500" data-rel-z="-500" data-rel-rotate-y="90">Back</div>
-      <div id="box-back1" class="step box1" data-rel-reset data-rel-z="-200" data-scale="0.6">Inside Back</div>
-      <div id="box-top1" class="step box1" data-rel-reset data-rel-y="-300" data-rel-z="-300" data-rel-rotate-x="90" data-scale="0.6">Inside Top</div>
-      <div id="box-top" class="step box" data-rel-reset data-rel-z="200">Top</div>
-      <div id="box-left" class="step box" data-rel-reset data-rel-x="500" data-rel-z="-500" data-rel-rotate-y="90">Left</div>
-      <div id="box-left1" class="step box1" data-rel-reset data-rel-z="-200" data-scale="0.6">Inside Left</div>
-      <div id="box-bottom1" class="step box1" data-rel-reset data-rel-x="300" data-rel-z="-300" data-rel-rotate-y="90" data-scale="0.6">Inside Bottom</div>
-      <div id="box-bottom" class="step box" data-rel-reset data-rel-z="200">Bottom</div> -->
-
     <div id="ring1-1" class="step" data-rel-reset="all" data-x="0" data-y="0" data-z="0" data-rotate-y="10">
       <div
         style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-07a9ccd7-6754-4d78-b9a2-84bb1b693849-2316-2316.jpg');background-repeat: no-repeat;background-size: 100% ;">
@@ -99,92 +84,92 @@
 
     <div id="ring1-2" class="step" data-rel-rotate-y="45" data-rel-z="-354" data-rel-x="854">
       <div
-        style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/mmexport1627797779298.JPG');background-repeat: no-repeat;background-size: 100% ;">
+        style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-3c889824-ea0f-493f-bd43-c9fd2d531c94-1597-2373.png');background-repeat: no-repeat;background-size: 100% ;">
       </div>
     </div>
 
     <div id="ring1-3" class="step">
       <div
-        style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/mmexport1627797788134.JPG');background-repeat: no-repeat;background-size: 100% ;">
+        style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-3d132ee7-6c7e-41f1-bc8b-7037cb577ef7-714-800.jpg');background-repeat: no-repeat;background-size: 100% ;">
       </div>
     </div>
 
     <div id="ring1-4" class="step">
       <div
-        style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/mmexport1627797727309.JPG');background-repeat: no-repeat;background-size: 100% ;">
+        style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-3e6cc77c-cbaf-47a1-a632-1231460637d7-2543-1957.jpg');background-repeat: no-repeat;background-size: 100% ;">
       </div>
     </div>
 
     <div id="ring1-5" class="step">
       <div
-        style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/微信图片_20210828151918.JPG');background-repeat: no-repeat;background-size: 100% ;">
+        style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-4ac461a7-852e-4ab4-ae1e-e0c750c41abb-1096-1240.jpg');background-repeat: no-repeat;background-size: 100% ;">
       </div>
     </div>
 
     <div id="ring1-6" class="step">
       <div
-        style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/微信图片_20210828151925.JPG');background-repeat: no-repeat;background-size: 100% ;">
+        style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-4c782952-7262-4f82-92e0-348e91e9cd79-2134-1600.jpg');background-repeat: no-repeat;background-size: 100% ;">
       </div>
     </div>
 
     <div id="ring1-7" class="step">
       <div
-        style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/微信图片_20210828151929.JPG');background-repeat: no-repeat;background-size: 100% ;">
+        style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-6f65186a-b795-40e8-b643-6db58a57c657-2769-2316.jpg');background-repeat: no-repeat;background-size: 100% ;">
       </div>
     </div>
 
     <div id="ring1-8" class="step">
       <div
-        style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/微信图片_20220725082150.JPG');background-repeat: no-repeat;background-size: 100% ;">
+        style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-07a9ccd7-6754-4d78-b9a2-84bb1b693849-2316-2316.jpg');background-repeat: no-repeat;background-size: 100% ;">
       </div>
     </div>
 
     <div id="ring2-1" class="step ring2" data-rel-reset="all" data-x="-500" data-y="0" data-z="-1514" data-rotate-x="90"
       data-rotate-y="270" data-rotate-z="0">
       <div
-        style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/微信图片_20220812190224.JPG');background-repeat: no-repeat;background-size: 100% ;">
+        style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-7f6379e8-507b-49de-902e-34d44b8182b4-1512-1187.jpg');background-repeat: no-repeat;background-size: 100% ;">
       </div>
     </div>
 
     <div id="ring2-2" class="step ring2" data-rel-rotate-y="45" data-rel-z="-354" data-rel-x="854" data-rel-y="0">
       <div
-        style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/微信图片_20220812190803.JPG');background-repeat: no-repeat;background-size: 100% ;">
+        style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-9fd81bdb-492e-4eac-bc76-7a8604b7b99f-1597-2373.png');background-repeat: no-repeat;background-size: 100% ;">
       </div>
     </div>
 
     <div id="ring2-3" class="step ring2">
       <div
-        style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/IMG_0131.JPG');background-repeat: no-repeat;background-size: 100% ;">
+        style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-10f6a40f-c911-49c0-b42c-50054fa32bdf-969-1024.jpg');background-repeat: no-repeat;background-size: 100% ;">
       </div>
     </div>
 
     <div id="ring2-4" class="step ring2">
       <div
-        style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/IMG_1558.JPG');background-repeat: no-repeat;background-size: 100% ;">
+        style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-23ee4417-d229-42a9-9cf7-9ab0cca8b125-2316-2316.jpg');background-repeat: no-repeat;background-size: 100% ;">
       </div>
     </div>
 
     <div id="ring2-5" class="step ring2">
       <div
-        style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/IMG_1559.JPG');background-repeat: no-repeat;background-size: 100% ;">
+        style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-29d7fdca-68ec-4a9a-81d2-2ccacce93b8e-1080-1210.jpg');background-repeat: no-repeat;background-size: 100% ;">
       </div>
     </div>
 
     <div id="ring2-6" class="step ring2">
       <div
-        style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/mmexport1627797719893.JPG');background-repeat: no-repeat;background-size: 100% ;">
+        style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-30eafb8b-6e1c-4983-9aea-e2d0bec4d292-1544-1158.JPG');background-repeat: no-repeat;background-size: 100% ;">
       </div>
     </div>
 
     <div id="ring2-7" class="step ring2">
       <div
-        style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/mmexport1627797774955.JPG');background-repeat: no-repeat;background-size: 100% ;">
+        style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-76c4fd2d-873a-4c82-89d7-e6f4e67458f3-1158-1158.jpg');background-repeat: no-repeat;background-size: 100% ;">
       </div>
     </div>
 
     <div id="ring2-8" class="step ring2">
       <div
-        style="width: 100%; height: 100%; background-image: url('../../static/imgs/jiao-jiao/mmexport1627797782661.JPG');background-repeat: no-repeat;background-size: 100% ;">
+        style="width: 100%; height: 100%; background-image: url('../../static/images/jiao-jiao/image-79b008b5-00e3-4c47-9dc4-ac488e872ab5-1706-1280.JPG');background-repeat: no-repeat;background-size: 100% ;">
       </div>
     </div>
   </div>
