--- a/views/BigBirthdayCake.html
+++ b/views/BigBirthdayCake.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="description" content="利用 svg制作的一个蛋糕界面">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-    <title>Happy Birthday to 龚静</title>
+    <title>Happy Birthday To You</title>
     <style>
         /* ============================================== Candle*/
         #cake {
