--- a/views/first.html
+++ b/views/first.html
@@ -132,8 +132,8 @@
         show_date_time();
     </script>
     <script>
-        let sayYou = "❤|Hi 龚静|今天可是一个|重要的日子|祝你快乐|不止生日|生日快乐哟|#countdown 3|#rectangle 50x50|#circle 20 |#break|";
-        sayYou = "❤|Hi 龚静|今天可是一个|重要的日子|祝你快乐|不止生日|生日快乐哟|#countdown 3|#rectangle 50x50|#break|";
+        let sayYou = "❤|Hi |今天可是一个|重要的日子|祝你快乐|不止生日|生日快乐哟|#countdown 3|#rectangle 50x50|#circle 20 |#break|";
+        sayYou = "❤|Hi |今天可是一个|重要的日子|生日快乐|祝你快乐|不止生日|生日快乐哟|#countdown 3|#rectangle 50x50|#break|";
         let hrefNextPage = "./BirthdayCake.html"
         var S = {
             init: function () {
