--- a/views/images_show_02.html
+++ b/views/images_show_02.html
@@ -242,7 +242,8 @@
             min-height: 100vh;
             color: #fff;
             color: var(--color-text);
-            background: linear-gradient(115deg, rgba(86, 216, 228, 1) 5%, rgba(159, 1, 234, 1) 95%);
+            /* background: linear-gradient(115deg, rgba(86, 216, 228, 1) 5%, rgba(159, 1, 234, 1) 95%); */
+            background: linear-gradient(115deg, rgb(0, 0, 0) 5%, rgb(1, 1, 1) 95%);
             -webkit-font-smoothing: antialiased;
             -moz-osx-font-smoothing: grayscale;
             overflow: hidden;
