--- a/views/impress_index.html
+++ b/views/impress_index.html
@@ -59,7 +59,7 @@
     }
 
     .active .step-content>:nth-child(3) {
-      background-image: url('../static/images/shan-shan/IMG_3609.JPG');
+      /* background-image: url('../static/images/shan-shan/IMG_3609.JPG'); */
       background-repeat: round;
       width: 100%;
       height: 100%;
@@ -187,9 +187,9 @@
         </iframe>
       </div>
     </div>
-    <div class="step" data-x="6400" data-y="4500" data-z="5000" data-scale="2">
+    <div class="step" data-x="6500"  data-z="5500" data-rotate-y="90" data-scale="2">
       <div class="step-content-font" style="width: 1920;height: 1080;">
-       
+        最后请欣赏烟花吧
       </div>
     </div>
   </div>
