--- a/views/login.html
+++ b/views/login.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	<meta name="description" content="简易登录界面">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Happy Birthday to 龚静</title>
+	<title>Happy Birthday To You</title>
 	<style>
 		* {
 			box-sizing: border-box;
@@ -280,10 +280,10 @@
 	<div class="htmleaf-container">
 		<div class="wrapper">
 			<div class="container">
-				<h1>Happy birthday to you,龚静</h1>
+				<h1>Happy birthday to you</h1>
 				<form class="form">
-					<input id="userName" name="userName" type="text" placeholder="Name" value="gj">
-					<input id="pwd" name="pwd" type="password" placeholder="Day" value="10-05">
+					<input id="userName" name="userName" type="text" placeholder="Name" value="pys">
+					<input id="pwd" name="pwd" type="password" placeholder="Day" value="11-29">
 					<button type="submit" id="login-button">Enter</button>
 				</form>
 			</div>
@@ -307,7 +307,7 @@
 			$('#login-button').click(function (event) {
 				var userName = document.getElementById("userName").value;
 				var pwd = document.getElementById("pwd").value;
-				if (userName == "gj" && pwd == "10-05") {
+				if (userName == "pys" && pwd == "11-29") {
 					event.preventDefault();
 					$('form').fadeOut(500);
 					$('.wrapper').addClass('form-success');
